releases/1.1.1/docs/cpp/_sources/api/program_listing_file_cppdocs_generated_include_slint_backend_internal.h.rst.txt

.. _program_listing_file_cppdocs_generated_include_slint_backend_internal.h:

Program Listing for File slint_backend_internal.h
=================================================

|exhale_lsh| :ref:`Return to documentation for file <file_cppdocs_generated_include_slint_backend_internal.h>` (``cppdocs/generated_include/slint_backend_internal.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   #pragma once
   
   /* Generated with cbindgen:0.24.5 */
   
   #include <cstdarg>
   #include <cstdint>
   #include <cstdlib>
   #include <ostream>
   #include <new>
   #include "slint_image_internal.h"
   #include "slint_internal.h"
   
   namespace slint {
   namespace cbindgen_private {
   
   using WindowAdapterUserData = void*;
   
   struct RendererPtr {
       const void *_a;
       const void *_b;
   };
   
   using PlatformUserData = void*;
   
   using SoftwareRendererOpaque = const void*;
   
   using CppRawHandleOpaque = const void*;
   
   using SkiaRendererOpaque = const void*;
   
   extern "C" {
   
   void slint_windowrc_init(WindowAdapterRcOpaque *out);
   
   void slint_ensure_backend();
   
   void slint_run_event_loop();
   
   void slint_post_event(void (*event)(void *user_data),
                         void *user_data,
                         void (*drop_user_data)(void*));
   
   void slint_quit_event_loop();
   
   void slint_register_font_from_path(const WindowAdapterRcOpaque *win,
                                      const SharedString *path,
                                      SharedString *error_str);
   
   void slint_register_font_from_data(const WindowAdapterRcOpaque *win,
                                      Slice<uint8_t> data,
                                      SharedString *error_str);
   
   void slint_testing_init_backend();
   
   void slint_window_adapter_new(WindowAdapterUserData user_data,
                                 void (*drop)(WindowAdapterUserData),
                                 RendererPtr (*get_renderer_ref)(WindowAdapterUserData),
                                 void (*show)(WindowAdapterUserData),
                                 void (*hide)(WindowAdapterUserData),
                                 void (*request_redraw)(WindowAdapterUserData),
                                 IntSize (*size)(WindowAdapterUserData),
                                 WindowAdapterRcOpaque *target);
   
   void slint_platform_register(PlatformUserData user_data,
                                void (*drop)(PlatformUserData),
                                void (*window_factory)(PlatformUserData, WindowAdapterRcOpaque*));
   
   bool slint_windowrc_has_active_animations(const WindowAdapterRcOpaque *handle);
   
   void slint_windowrc_dispatch_resize_event(const WindowAdapterRcOpaque *handle,
                                             float width,
                                             float height);
   
   void slint_windowrc_dispatch_scale_factor_change_event(const WindowAdapterRcOpaque *handle,
                                                          float scale_factor);
   
   void slint_platform_update_timers_and_animations();
   
   SoftwareRendererOpaque slint_software_renderer_new(uint32_t buffer_age);
   
   void slint_software_renderer_drop(SoftwareRendererOpaque r);
   
   void slint_software_renderer_render_rgb8(SoftwareRendererOpaque r,
                                            const WindowAdapterRcOpaque *window_adapter,
                                            Rgb8Pixel *buffer,
                                            uintptr_t buffer_len,
                                            uintptr_t pixel_stride);
   
   RendererPtr slint_software_renderer_handle(SoftwareRendererOpaque r);
   
   CppRawHandleOpaque slint_new_raw_window_handle_win32(void *hwnd, void *hinstance);
   
   CppRawHandleOpaque slint_new_raw_window_handle_x11(uint32_t window,
                                                      uint32_t visual_id,
                                                      void *connection,
                                                      int screen);
   
   CppRawHandleOpaque slint_new_raw_window_handle_wayland(void *surface, void *display);
   
   CppRawHandleOpaque slint_new_raw_window_handle_appkit(void *ns_view, void *ns_window);
   
   void slint_raw_window_handle_drop(CppRawHandleOpaque handle);
   
   SkiaRendererOpaque slint_skia_renderer_new(CppRawHandleOpaque handle_opaque, IntSize size);
   
   void slint_skia_renderer_drop(SkiaRendererOpaque r);
   
   void slint_skia_renderer_show(SkiaRendererOpaque r);
   
   void slint_skia_renderer_hide(SkiaRendererOpaque r);
   
   void slint_skia_renderer_resize(SkiaRendererOpaque r, IntSize size);
   
   void slint_skia_renderer_render(SkiaRendererOpaque r, const WindowAdapterRcOpaque *window);
   
   RendererPtr slint_skia_renderer_handle(SkiaRendererOpaque r);
   
   } // extern "C"
   
   } // namespace cbindgen_private
   } // namespace slint
